﻿0.7.0
=====

New Features:

  * Special:OrphanedPages added to display un-linked pages (hanspeterklapf).
  * Remove ability to automatically upgrade from versions prior to 0.5.0.
  * "Next" and "prev" diff links added to Special:History to match Mediawiki.
  * Number of characters changed in a diff is now displayed on recent changes,
    history and other pages to match Mediawiki.
  * Signficant (5-10x or more) performance improvement of image rendering by
    making better use of cache.  Suggestions from Jim.
  * Modify Special:Specialpages so that it is localized for each visitor,
    rather than always defaulting to the language for which the wiki was setup.
  * Provide the capability to redirect to a virtual wiki using syntax of the
    form "#REDIRECT [[:virtual:Topic]].  Requested by tfschueller.
  * Login will now always take the user back to the page from which 'login' was
    clicked, as requested by many users and as implemented by Mediawiki.
  * Updated spam filter patterns.
  * Upgrade to Spring Framework 2.5.5.
  * Upgrade to Spring Security 2.0.4.

Bugfixes:

  * None

Translation Updates:

  * Added Portugese (Brazilian) translations (leandes).


0.6.7
=====

New Features:

  * None

Bugfixes:

  * JDK 1.6 and greater changed the behavior of the JDBC getColumnName() method
    causing the watchlist tab to break.  Fix suggested by Luc.
  * Virtual wiki default topics with spaces were incorrectly being stored with
    spaces converted to underscores ("Main_Page" instead of "Main Page").
  * Null pointer exception when viewing URLs with no topic and no trailing
    slash of the form "/context/virtual".
  * A bug introduced in a previous release prevented empty topics from being
    saved - this is now fixed.
  * Links of the form [[#section]] and [[#section|text]] will now be parsed
    correctly.
  * Fix broken parsing of links containing + such as [[start + end]].  Reported
    by MarioF.