@@ -1,5 +1,13 @@
 /* FIXME - need a validation query */
 STATEMENT_CONNECTION_VALIDATION_QUERY = 
+STATEMENT_CREATE_AUTHORITIES_TABLE = \
+    CREATE CACHED TABLE jam_authorities ( \
+      username VARCHAR(100) NOT NULL, \
+      authority VARCHAR(30) NOT NULL, \
+      CONSTRAINT jam_u_auth UNIQUE (username, authority), \
+      CONSTRAINT jam_f_auth_username FOREIGN KEY (username) REFERENCES jam_users(username), \
+      CONSTRAINT jam_f_auth_authority FOREIGN KEY (authority) REFERENCES jam_role(role_name) \
+    )
 STATEMENT_CREATE_CATEGORY_TABLE = \
     CREATE CACHED TABLE jam_category ( \
       child_topic_id INTEGER NOT NULL, \
@@ -7,6 +15,14 @@ STATEMENT_CREATE_CATEGORY_TABLE = \
       sort_key VARCHAR(200), \
       CONSTRAINT jam_p_category PRIMARY KEY (child_topic_id, category_name), \
       CONSTRAINT jam_f_cat_child_id FOREIGN KEY (child_topic_id) REFERENCES jam_topic(topic_id) \
+    )
+STATEMENT_CREATE_GROUP_AUTHORITIES_TABLE = \
+    CREATE CACHED TABLE jam_group_authorities ( \
+      group_id INTEGER NOT NULL, \
+      authority VARCHAR(30) NOT NULL, \
+      CONSTRAINT jam_u_gauth UNIQUE (group_id, authority), \
+      CONSTRAINT jam_f_gauth_group FOREIGN KEY (group_id) REFERENCES jam_group(group_id), \
+      CONSTRAINT jam_f_gauth_authority FOREIGN KEY (authority) REFERENCES jam_role(role_name) \
     )
 STATEMENT_CREATE_GROUP_TABLE = \
     CREATE CACHED TABLE jam_group ( \
