@@ -1,3 +1,19 @@
+STATEMENT_CREATE_AUTHORITIES_TABLE = \
+    CREATE TABLE jam_authorities ( \
+      username VARCHAR(100) NOT NULL, INDEX jam_i_auth_username (username), \
+      authority VARCHAR(30) NOT NULL, INDEX jam_i_auth_authority (authority), \
+      CONSTRAINT jam_u_auth UNIQUE (username, authority), \
+      CONSTRAINT jam_f_auth_username FOREIGN KEY (username) REFERENCES jam_users(username), \
+      CONSTRAINT jam_f_auth_authority FOREIGN KEY (authority) REFERENCES jam_role(role_name) \
+    )
+STATEMENT_CREATE_GROUP_AUTHORITIES_TABLE = \
+    CREATE TABLE jam_group_authorities ( \
+      group_id INTEGER NOT NULL, INDEX jam_i_gauth_group (group_id), \
+      authority VARCHAR(30) NOT NULL, INDEX jam_i_gauth_authority (authority), \
+      CONSTRAINT jam_u_gauth UNIQUE (group_id, authority), \
+      CONSTRAINT jam_f_gauth_group FOREIGN KEY (group_id) REFERENCES jam_group(group_id), \
+      CONSTRAINT jam_f_gauth_authority FOREIGN KEY (authority) REFERENCES jam_role(role_name) \
+    )
 STATEMENT_CREATE_ROLE_MAP_TABLE = \
     CREATE TABLE jam_role_map ( \
       role_name VARCHAR(30) NOT NULL, INDEX jam_i_rmap_rname (role_name), \
